Revert "Reduce GC coverage for trivial API test"
This reverts commit 8fd1ee093066138c9aa5602dcac0e7db1916db6b.